--- a/core/test/index.html
+++ b/core/test/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>QUnit Example</title>
+  <title>JSLite Core Tests (and core integration tests)</title>
   <link rel="stylesheet" href="qunit/qunit.css">
 </head>
 <body>
