API change to require username in rslite constructor

--- a/conflict_detect/test/integrationTests.html
+++ b/conflict_detect/test/integrationTests.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>JSLite Cache Unit & Integration Tests</title>
+  <title>JSLite Conflict Detect Unit & Integration Tests</title>
   <link rel="stylesheet" href="qunit/qunit.css">
 </head>
 <body>
@@ -10,7 +10,7 @@
   <div id="qunit-fixture"></div>
   <script src="qunit/qunit.js"></script>
   <script src="../../core/dist/rslite-core-debug.js"></script>
-  <script src="../dist/rslite-cache-debug.js"></script>
+  <script src="../dist/rslite-conflictdetect-debug.js"></script>
   <script src="tests.js"></script>
 </body>
 </html>
